Fix: Change Web Cors from Http to Https

--- a/GeekShopping/FrontEnd/GeekShopping.Web/appsettings.Development.json
+++ b/GeekShopping/FrontEnd/GeekShopping.Web/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ServiceUrls": {
-    "ProductAPI": "http://localhost:4440",
+    "ProductAPI": "https://localhost:4440",
     "IdentityServer": "https://localhost:4435"
   }
 }
