feat: home index e details front-end implemented

--- a/GeekShopping/BackEnd/GeekShopping.Api/appsettings.Development.json
+++ b/GeekShopping/BackEnd/GeekShopping.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString": "Server=localhost;DataBase=geek_shopping_api;Uid=yourId;Pwd=yourPw"
+    "MySQLConnectionString": "Server=localhost;DataBase=geek_shopping_api;Uid=root;Pwd=Jose2904."
   },
   "Logging": {
     "LogLevel": {
