--- a/GeekShopping/BackEnd/GeekShopping.IdentityServer/appsettings.Development.json
+++ b/GeekShopping/BackEnd/GeekShopping.IdentityServer/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString": "Server=localhost;DataBase=geek_shopping_identity_server;Uid=yourId;Pwd=yourPw"
+    "MySQLConnectionString": "Server=localhost;DataBase=geek_shopping_identity_server;Uid=root;Pwd=Jose2904."
   },
   "Logging": {
     "LogLevel": {
