--- a/GeekShopping/FrontEnd/GeekShopping.Web/appsettings.Development.json
+++ b/GeekShopping/FrontEnd/GeekShopping.Web/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ServiceUrls": {
     "ProductAPI": "https://localhost:4440",
-    "IdentityServer": "https://localhost:4435"
+    "IdentityServer": "https://localhost:4435",
+    "CartAPI": "https://localhost:4445"
   }
 }
