--- a/GeekShopping/BackEnd/GeekShopping.Cart.Api/appsettings.Development.json
+++ b/GeekShopping/BackEnd/GeekShopping.Cart.Api/appsettings.Development.json
@@ -7,6 +7,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "CouponAPI": "https://localhost:4450"
   }
 
 }
