--- a/GeekShopping/FrontEnd/GeekShopping.Web/appsettings.Development.json
+++ b/GeekShopping/FrontEnd/GeekShopping.Web/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ServiceUrls": {
     "ProductAPI": "https://localhost:4440",
     "IdentityServer": "https://localhost:4435",
